TOP_DIR=..

EXTRA_DIST = \
        interface.h \
        timeuse.h \
        clock.c \
        flowers.c \
        lake.c \
        platform_gix.c \
        platform_gtk2.c \
        platform_minigui.c \
        platform_win32.c \
        subwaymap.c \
        tiger.c \
        platform_qt4.cpp \
        GNUmakefile.gix \
        GNUmakefile.gtk2 \
        GNUmakefile.minigui \
        GNUmakefile.qt4 \
        GNUmakefile.win32 \
        lake.bmp 
