TOP_DIR=..

EXTRA_DIST = \
    drawFunc.h \
    timeuse.h \
    alpha_func.c \
    bitblt_func.c \
    blur_func.c \
    clip_func.c \
    composite_func.c \
    gamma_func.c \
    gcstate_func.c \
    gradient_func.c \
    mask_func.c \
    part_func.c \
    path_func.c \
    pattern_func.c \
    shadow_func.c \
    testGtk2.c \
    testMg.c \
    testWin.c \
    text_func.c \
    thr_posix.c \
    thr_win32.c \
    thread_func.c \
    testQt4.cpp \
    GNUmakefile.gtk2 \
    GNUmakefile.minigui \
    GNUmakefile.qt4 \
    GNUmakefile.win32 \
    font_config.cfg \
    pat.bmp \
    pat.png \
    pat565.bmp \
    selt2.bmp \
    selt2.png \
    selt2565.bmp \
    sung.ttf

